--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1
 {
 	font-size: 2.5rem;
 	font-weight: 700;
-	color: rgb(35, 35, 85);
+	color: white;
 }
 
 span
@@ -27,8 +27,14 @@ span
 h6
 {
 	font-size: 1.1rem;
-	color: rgb(24, 24, 49);
+	color: white;
 }
+footer {
+	text-align: center;
+	padding: 3px;
+	background-color: #222;
+	color: white;
+  }
 nav
 {
 	position: fixed;
@@ -44,10 +50,23 @@ nav
 
 nav .logo
 {
-	width: 80px;
+	width: 55px;
 	cursor: pointer;
 }
 
+footer .logo
+{
+	width: 55px;
+	cursor: pointer;
+}
+
+footer .logo2
+{
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 35px;
+}
 nav .navigation
 {
 	display: flex;
@@ -81,7 +100,7 @@ nav .navigation ul li
 nav .navigation ul li a
 {
 	text-decoration: none;
-	color: rgb(21, 21, 100);
+	color: white);
 	font-size: 16px;
 	font-weight: 500;
 	transition: 0.3s ease;
@@ -96,7 +115,7 @@ nav .navigation ul li a:hover
 
 #home
 {
-	background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5,4,46,0.7)), url("img/back.jpg");
+	background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5,4,46,0.7)), url("https://lumiere-a.akamaihd.net/v1/images/5d28a41bb580bd00010b8018-image_0631224c.jpeg?region=0,0,1536,864&width=768");
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
@@ -168,6 +187,7 @@ nav .navigation ul li a:hover
 {
 	padding: 8vw 8vw 8vw 8vw;
 	text-align: center;
+	background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5,4,46,0.7)), url("https://t3.ftcdn.net/jpg/03/53/02/42/360_F_353024251_u6f33z5rVWc52ItyEsnqLQAzoGBa6grq.jpg");
 }
 
 #project .project-box
@@ -193,7 +213,11 @@ nav .navigation ul li a:hover
 	background-size: cover;
 	background-position: center;
 }
-
+#experts .pp1 {
+  width:85%;
+  height:60%;
+  border-radius:20%;
+}
 #project .projects .details
 {
 	padding: 15px 15px 0 15px;
@@ -201,7 +225,7 @@ nav .navigation ul li a:hover
 
 #project .projects .details i
 {
-	color: #fdc93b;
+	color: white;
 	font-size: .9rem;
 }
 
@@ -221,7 +245,7 @@ nav .navigation ul li a:hover
 #registration
 {
 	padding: 6vw 8vw 6vw 8vw;
-	background-image: linear-gradient(rgba(99,112,168,0.5), rgba(81,91,233,0.5)),url("img/projects.webp");
+	background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5,4,46,0.7)), url("https://t3.ftcdn.net/jpg/03/53/02/42/360_F_353024251_u6f33z5rVWc52ItyEsnqLQAzoGBa6grq.jpg");
 	width: 100%;
 	height: 100%;
 	background-size: cover;
@@ -308,6 +332,8 @@ nav .navigation ul li a:hover
 {
 	padding: 8vw 8vw 8vw 8vw;
 	text-align: center;
+	background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5,4,46,0.7)), url("https://t3.ftcdn.net/jpg/03/53/02/42/360_F_353024251_u6f33z5rVWc52ItyEsnqLQAzoGBa6grq.jpg");
+
 }
 
 #experts .expert-box
@@ -320,7 +346,7 @@ nav .navigation ul li a:hover
 
 #experts .expert-box .profile
 {
-	background: #b5b6f5;
+	background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5,4,46,0.7)), url("https://t3.ftcdn.net/jpg/03/53/02/42/360_F_353024251_u6f33z5rVWc52ItyEsnqLQAzoGBa6grq.jpg");
 	padding: 30px 10px;
 	box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
